# YKAVStudyPlatform

./: .gitignore  CMakeLists.txt  README.md
 algorithm/: README.md
CmakeModules/: FindFFmpeg.cmake
avcore/: CMakeLists.txt
avcore/bsparser/: CMakeLists.txt  NalParse.cpp  NalParse.h  h264_analyze.cpp  h264_avcc.cpp  h264_sei.cpp  h264_stream.cpp  h264_stream.h  h265_avcc.cpp  h265_avcc.h  h265_sei.cpp  h265_stream.cpp  h265_stream.h  main.cpp
avcore/looper/: CMakeLists.txt
avcore/looper/example/: main.cpp
avcore/media/: CMakeLists.txt
avcore/media/decode/: decode.cpp
avcore/media/encode/: audio_encode2.c  encode_aac.cpp  encode_aac.h  ffmpeg_fdk_aac_encode.cpp
avcore/media/ffmpeg/: decode.cpp  decode.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c  h264ToMp4.cpp  h264ToMp4.h  pqmuxer.cpp  pqmuxer.h
avcore/media/ffmpeg_examples/: audioMix.cpp  avio_reading.c  demuxing_decoding.c  encode_audio.c  ffmpeg_transcode.cpp  filter_audio.c  filtering_audio.c  filtering_audio_amix.c  filtering_video.c  muxing.c  qsvdec.c  remuxing.c  transcode_aac.c  transcoding.c
avcore/media/ffmpeg_examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc  libswresample-uninstalled.pc
avcore/media/ffplay/: ffplay-4.2.1-OS.c  ffplay.c
avcore/media/ffplay-my/: CMakeLists.txt  ff_av_clock.c  ff_av_clock.h  ff_decoder.c  ff_decoder.h  ff_demuxer.c  ff_demuxer.h  ff_error.h  ff_frame_queue.c  ff_frame_queue.h  ff_main.c  ff_packet_queue.c  ff_packet_queue.h  ff_player.c  ff_player.h  ff_tools.h  ff_utils.c  ff_utils.h
avcore/media/ffplay/include/: SDL_config.h
avcore/media/ffplay2/: CMakeLists.txt  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IMediaPlayer.cpp  IMediaPlayer.h  IObserver.cpp  IObserver.h  IResample.cpp  IResample.h  IThread.cpp  IThread.h
avcore/media/ffprobe/: ffprobe.c
avcore/media/filter/: video_add_image_filter.c
avcore/media/muxer/: muxer.cpp  muxer.h  pqmuxer.cpp  pqmuxer.h  tempo_muxer.cpp  tempo_muxer.h
avcore/media/remuxer/: muxer.cpp  muxer.hpp
avcore/media/utils/: cmdutils.c  cmdutils.h  log4z.cpp  tools.h
avcore/parser/: h264_parser.c
avcore/qt/: CMakeLists.txt
avcore/qt/audio/: QAudioPlayer.cpp  QAudioPlayer.h  main.cpp  pcmplay.cpp  pcmplay.h
avcore/qt/filter/: FFmpegAVFilter.cpp  FFmpegAVFilter.h  FFmpegAVFilter.ui  main.cpp  video_filter.c  video_filter.h
avcore/qt/video/: QYUVWidget.cpp  QYUVWidget.h  TestWidget.cpp  TestWidget.h  TestWidget.ui  TestWidget.ui.autosave  main.cpp  qyuvplayer.cpp  qyuvplayer.h  qyuvplayer.ui
cplusplus/: CMakeLists.txt  callback.cpp
sample/: bsparser.cpp
